--- a/Python Features/jsonBath.ipynb
+++ b/Python Features/jsonBath.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "import os"
@@ -40,14 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "default_argv = \"-save=\"\n",
     "nltk_path = \"./nltk/main.py\"\n",
     "summary_path = \"./summary/main.py\"\n",
     "nltk_argv = [\"ss\", \"soao\", \"ss -soao\"]\n",
-    "summary_argv = ['s','p', 'a', 't', 'm']"
+    "summary_argv = ['s','p', 'a', 't', 'm', 's -p -a -t -m']"
    ],
    "metadata": {
     "collapsed": false,
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "outputs": [
     {
      "name": "stdout",
@@ -87,7 +87,7 @@
     "    for argv in nltk_argv:\n",
     "        print(w)\n",
     "        os.system(\"python \" + nltk_path + \" \" + w + \" -\" +\n",
-    "              argv + \" \" + default_argv + w + \"_\" + argv.replace(\" \", \"\").replace(\"-\", \"_\"))"
+    "              argv + \" \" + default_argv + \"nltk_\" + argv.replace(\"-\", \"_\").replace(\" \", \"\"))"
    ],
    "metadata": {
     "collapsed": false,
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "outputs": [
     {
      "name": "stdout",
@@ -109,6 +109,8 @@
       "https://edition.cnn.com/videos/us/2020/06/01/police-killings-black-lives-matter-timeline-ryan-young-pkg.cnn\n",
       "https://edition.cnn.com/videos/us/2020/06/01/police-killings-black-lives-matter-timeline-ryan-young-pkg.cnn\n",
       "https://edition.cnn.com/videos/us/2020/06/01/police-killings-black-lives-matter-timeline-ryan-young-pkg.cnn\n",
+      "https://edition.cnn.com/videos/us/2020/06/01/police-killings-black-lives-matter-timeline-ryan-young-pkg.cnn\n",
+      "https://edition.cnn.com/us/live-news/george-floyd-protests-06-01-20/index.html\n",
       "https://edition.cnn.com/us/live-news/george-floyd-protests-06-01-20/index.html\n",
       "https://edition.cnn.com/us/live-news/george-floyd-protests-06-01-20/index.html\n",
       "https://edition.cnn.com/us/live-news/george-floyd-protests-06-01-20/index.html\n",
@@ -119,6 +121,8 @@
       "https://edition.cnn.com/2020/06/01/asia/hong-kong-tiananmen-vigil-intl-hnk/index.html\n",
       "https://edition.cnn.com/2020/06/01/asia/hong-kong-tiananmen-vigil-intl-hnk/index.html\n",
       "https://edition.cnn.com/2020/06/01/asia/hong-kong-tiananmen-vigil-intl-hnk/index.html\n",
+      "https://edition.cnn.com/2020/06/01/asia/hong-kong-tiananmen-vigil-intl-hnk/index.html\n",
+      "https://edition.cnn.com/videos/business/2020/05/30/spacex-nasa-launch-vpx.cnn\n",
       "https://edition.cnn.com/videos/business/2020/05/30/spacex-nasa-launch-vpx.cnn\n",
       "https://edition.cnn.com/videos/business/2020/05/30/spacex-nasa-launch-vpx.cnn\n",
       "https://edition.cnn.com/videos/business/2020/05/30/spacex-nasa-launch-vpx.cnn\n",
@@ -132,7 +136,7 @@
     "    for argv in summary_argv:\n",
     "        print(w)\n",
     "        os.system(\"python \" + summary_path + \" \" + w + \" -\" +\n",
-    "              argv + \" \" + default_argv + str(abs(hash(w))) + \"_\" + argv)\n",
+    "              argv + \" \" + default_argv + \"summary_\" + argv.replace(\"-\", \"_\").replace(\" \", \"\"))\n",
     "\n",
     "\n",
     "\n"
