up 누락되었던 k 인자값을 가진 json 파일을 추가했습니다.

--- a/Python Features/jsonBath.ipynb
+++ b/Python Features/jsonBath.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "import os"
@@ -40,14 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "default_argv = \"-save=\"\n",
     "nltk_path = \"./nltk/main.py\"\n",
     "summary_path = \"./summary/main.py\"\n",
     "nltk_argv = [\"ss\", \"soao\", \"ss -soao\"]\n",
-    "summary_argv = ['s','p', 'a', 't', 'm', 's -p -a -t -m']"
+    "summary_argv = ['s','p', 'k', 'a', 't', 'm', 's -p -a -t -m -k']"
    ],
    "metadata": {
     "collapsed": false,
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -110,6 +110,8 @@
       "https://edition.cnn.com/videos/us/2020/06/01/police-killings-black-lives-matter-timeline-ryan-young-pkg.cnn\n",
       "https://edition.cnn.com/videos/us/2020/06/01/police-killings-black-lives-matter-timeline-ryan-young-pkg.cnn\n",
       "https://edition.cnn.com/videos/us/2020/06/01/police-killings-black-lives-matter-timeline-ryan-young-pkg.cnn\n",
+      "https://edition.cnn.com/videos/us/2020/06/01/police-killings-black-lives-matter-timeline-ryan-young-pkg.cnn\n",
+      "https://edition.cnn.com/us/live-news/george-floyd-protests-06-01-20/index.html\n",
       "https://edition.cnn.com/us/live-news/george-floyd-protests-06-01-20/index.html\n",
       "https://edition.cnn.com/us/live-news/george-floyd-protests-06-01-20/index.html\n",
       "https://edition.cnn.com/us/live-news/george-floyd-protests-06-01-20/index.html\n",
@@ -122,6 +124,8 @@
       "https://edition.cnn.com/2020/06/01/asia/hong-kong-tiananmen-vigil-intl-hnk/index.html\n",
       "https://edition.cnn.com/2020/06/01/asia/hong-kong-tiananmen-vigil-intl-hnk/index.html\n",
       "https://edition.cnn.com/2020/06/01/asia/hong-kong-tiananmen-vigil-intl-hnk/index.html\n",
+      "https://edition.cnn.com/2020/06/01/asia/hong-kong-tiananmen-vigil-intl-hnk/index.html\n",
+      "https://edition.cnn.com/videos/business/2020/05/30/spacex-nasa-launch-vpx.cnn\n",
       "https://edition.cnn.com/videos/business/2020/05/30/spacex-nasa-launch-vpx.cnn\n",
       "https://edition.cnn.com/videos/business/2020/05/30/spacex-nasa-launch-vpx.cnn\n",
       "https://edition.cnn.com/videos/business/2020/05/30/spacex-nasa-launch-vpx.cnn\n",
@@ -141,6 +145,18 @@
     "\n",
     "\n"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
