--- a/Python Features/jsonBath.ipynb
+++ b/Python Features/jsonBath.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "import os"
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "default_argv = \"-save=\"\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -142,7 +142,20 @@
     "        os.system(\"python \" + summary_path + \" \" + w + \" -\" +\n",
     "              argv + \" \" + default_argv + \"summary_\" + argv.replace(\"-\", \"_\").replace(\" \", \"\"))\n",
     "\n",
-    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "\n"
    ],
    "metadata": {
